Bug 1193280 - Part 2: Self-host Array.prototype.filter. r=jandem

--HG--
extra : rebase_source : 886a90e36f57b0e282d47d21a1639e5056890af6